# routevn-creator-client

./: .dockerignore  .env.example  .gitignore  .oxlintrc.json  .prettierignore  AGENTS.md  CLAUDE.md  PLAN.md  PROJECT_CREATION_IMPLEMENTATION_PLAN.md  README.md  dependency-design-bu.md  dependency-design.md  env.dev  implementation-examples.md  package-lock.json  package.json  plan.md  refactor-plan.md  repository.md  rettangoli.config.yaml  test-zoom-persistence.html  vitest.config.js
.github/workflows/: ci.yaml  macos-player-template.yaml  release-pages.yaml  windows-player-template.yaml
android/routevn/: settings.gradle.kts
crates/routevn-exporter/: Cargo.toml
crates/routevn-exporter-jni/: Cargo.toml
crates/routevn-exporter-jni/src/: lib.rs
crates/routevn-exporter/src/: lib.rs
crates/routevn-packager/: .gitignore  Cargo.toml  README.md  ROADMAP.md  TAURI_RESEARCH.md
crates/routevn-packager/examples/: sample-config.toml
crates/routevn-packager/fixtures/sample-export/: index.html  main.js
crates/routevn-packager/src/: artifacts.rs  cli.rs  errors.rs  installer.rs  lib.rs  main.rs  metadata.rs  payload.rs  targets.rs  tauri.rs  windows_resources.rs  zip.rs
crates/routevn-packager/tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
crates/routevn-packager/tauri-shell/src-tauri/capabilities/: default.json
crates/routevn-packager/tauri-shell/src-tauri/icons/: icon.icns
crates/routevn-packager/tauri-shell/src-tauri/src/: lib.rs  main.rs  player_persistence.rs  windows_system_menu.rs
docker/appimage/: build-in-container.sh  ubuntu-22.04.Dockerfile
docker/aur/: archlinux.Dockerfile  build-in-container.sh
docker/linux-packages/: build-in-container.sh  fedora-43.Dockerfile  ubuntu-22.04.Dockerfile
docker/windows-player-template/: build-in-container.sh  ubuntu-22.04.Dockerfile
docs/: Codebase-structure.md  README.md  Repository.md  Scene-editor.md  android.md  animation-editor-transition-mask-plan.md  engineering.md  export-bundle-size-reduction-plan.md  import-packages.md  insieme-2.1.0-hard-cutover-checklist.md  ios.md  keyboard-navigation-shortcuts.md  layout-editor-canvas-selection-spec.md  layout-editor-end-state-architecture.md  layout-editor-refactor-roadmap.md  line-editor.md  macos-player-export-plan.md  observability.md  product.md  project-storage-and-sync-redesign.md  resource-tags-spec.md  roadmap.md  scene-editor-text-sync-redesign.md  segmented-text-editor-poc.md  upload-file-types.md
docs/notes/: android-jni-exporter-spike.md  font-weight-extraction-audit.md  layout-editor-cleanup-research.md  macos-tauri-lexical-selection.md
docs/plans/: 2025-01-10-lines-editor-change-detection.md
docs/platform/: 01-domain-model.md  02-command-and-event-model.md  02-command-catalog.md  03-command-catalog.md  03-event-model.md  04-sync-protocol.md  05-storage.md  06-acceptance-gates.md  06-project-identity-and-metadata.md  07-implementation-path.md  07-persisted-key-catalog.md  08-id-generation.md  08-write-path-backlog.md  09-partitioning-and-write-contract.md  10-model-compatibility-and-upgrades.md  11-windows-player-runtime-persistence.md  12-windows-player-runtime-key-value-contract.md  13-macos-player-export.md  14-project-content-patches.md  README.md
docs/research/: scene-research.md
docs/runbooks/: collab-server-bootstrap.md  linux-release.md  macos-signing-and-notarization.md  project-database-audit.md  steam-release.md
docs/scene-editor-lexical-android-performance-research/: iteration-01-baseline-map.md  iteration-02-primitive-keystroke-snapshot.md  iteration-03-page-runtime-coupling.md  iteration-04-select-view-data.md  iteration-05-line-decorations-and-section-changes.md  iteration-06-gutter-layout-work.md  iteration-07-android-keyboard-and-ime.md  iteration-08-project-data-projection.md  iteration-09-draft-flush-and-autosave.md  synthesis.md  (+4 more)
patches/: @routevn__creator-model@1.1.2.patch
scripts/: android-dev.js  audit-font-weight-extraction.js  benchmark-export-chunking.js  build-android-assets.js  build-android-rust.sh  build-fe.js  build-ios-assets.js  build-macos-player-template.js  build-setup.js  build-windows-player-template-docker.sh  build-windows-player-template.js  build.sh  collabTestSupport.js  generate-vt-suite.mjs  ios.sh  main.js  mobile-keyboard-screenshot-android.js  playerStartGate.js  prepare-macos-player-template-release.js  prepare-route-engine-package.js  prepare-watch-static-assets.sh  run-vt-docker.sh  tauri-build-appimage-docker.sh  tauri-build-appimage.sh  tauri-build-linux-aur-docker.sh  tauri-build-linux-aur.sh  tauri-build-linux-package-docker.sh  tauri-build-linux-steam.sh  tauri-build-mac-steam.sh  tauri-build-mac.sh  tauri-build-win-steam.sh  tauri-wsl-windows-runner.sh  test-collab-adapters.js  test-command-only.js  test-convergence.js  test-export-bundle-pipeline.js  test-integration.js  test-route-engine-project-data.js  test-smoke.js  test-v2-append-bridge.js  (+15 more)
src/: common.js  repository.js  setup.android.js  setup.common.js  setup.ios.js  setup.js  setup.tauri.js  setup.web.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos-release.conf.json  tauri.prod.conf.json  tauri.steam.conf.json  tauri.windows.conf.json
src-tauri/assets/: LICENSE.txt  com.routevn.creator.metainfo.xml  linux-desktop.desktop.hbs
src-tauri/assets/player-templates/macos/: README.md
src-tauri/assets/player-templates/windows/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_presence.rs  export_macos.rs  export_windows.rs  export_zip.rs  lib.rs  linux_desktop_integration.rs  project_db.rs  project_file_protocol.rs  project_media_server.rs  static_web_server.rs  updater_manifest.rs  windows_system_menu_windows.rs
static/: index.html  test-permissions.html
temp/: tST4AJhFY02zNCKHlHt7P
test-results/: .last-run.json
test-update-server/: README.md  generate-test-versions.sh  package.json  server.js  test-server.js
tests/: mobileActionSheets.view.test.js  playerRuntimePersistenceFixtures.js
vt/: CHECKLIST.md
(+1517 files in other folders)
