[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-devtools = "2"
tauri-plugin-sql = { git = "https://github.com/han4wluc/plugins-workspace.git", rev = "4f9cdc691a68655688caf8d82f6c510cea793ce2", features = ["sqlite", "fs-scope-validation"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-persisted-scope = { version = "2", features = ["protocol-asset"] }
url = "2"
zip = { version = "0.6.6", default-features = false }
urlencoding = "2.1"
