[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
log = "0.4"
tauri = { version = "=2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "=2.7.1"
tauri-plugin-sql = { git = "https://github.com/han4wluc/plugins-workspace.git", rev = "4f9cdc691a68655688caf8d82f6c510cea793ce2", features = ["sqlite", "fs-scope-validation"] }
tauri-plugin-fs = "=2.5.1"
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-process = "=2.3.1"
tauri-plugin-opener = "=2.5.4"
tauri-plugin-persisted-scope = { version = "=2.3.4", features = ["protocol-asset"] }
url = "2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
urlencoding = "2.1"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "webp"] }
sprite_dicing = "0.1.4"
