[package]
name = "routevn-creator"
version = "1.9.1"
description = "RouteVN Creator. Follow us on social media to stay updated."
authors = ["Yuusoft"]
license = "MIT"
repository = "https://github.com/RouteVN/routevn-creator-client"
homepage = "https://routevn.com"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "=2.7.1"
tauri-plugin-sql = { git = "https://github.com/han4wluc/plugins-workspace.git", rev = "4f9cdc691a68655688caf8d82f6c510cea793ce2", features = ["sqlite", "fs-scope-validation"] }
tauri-plugin-fs = "=2.5.1"
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-process = "=2.3.1"
tauri-plugin-opener = "=2.5.4"
tauri-plugin-persisted-scope = { version = "=2.3.4", features = ["protocol-asset"] }
url = "2"
urlencoding = "2.1"
routevn-exporter = { path = "../crates/routevn-exporter" }
routevn-packager = { path = "../crates/routevn-packager" }
tempfile = "3"
plist = "=1.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "=0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
