[package]
name = "routevn-exporter-jni"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "routevn_exporter_jni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
routevn-exporter = { path = "../routevn-exporter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
