[package]
name = "routevn-shell"
version = "0.1.0"
description = "Reusable Tauri shell for RouteVN desktop packaging"
authors = ["RouteVN"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "routevn_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }
writeable = { version = "=0.6.3", features = ["alloc"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-log = "=2.7.1"
routevn-packager = { path = "../.." }

# Keep the standalone player shell on Rust 1.85-compatible transitive versions.
serde_with = "=3.15.1"
time = "=0.3.44"
writeable = { version = "=0.6.3", features = ["alloc"] }
icu_collections = "=2.0.0"
icu_locale_core = "=2.0.0"
icu_normalizer = "=2.0.0"
icu_normalizer_data = "=2.0.0"
icu_properties = "=2.0.1"
icu_properties_data = "=2.0.1"
icu_provider = "=2.0.0"
