[package]
name = "routevn-shell"
version = "1.10.1"
description = "Reusable Tauri shell for RouteVN desktop packaging"
authors = ["RouteVN"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.97.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "routevn_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }
writeable = { version = "=0.6.3", features = ["alloc"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.11.2", features = ["image-png"] }
tauri-plugin-log = "=2.7.1"
tauri-plugin-sql = { git = "https://github.com/han4wluc/plugins-workspace.git", rev = "4f9cdc691a68655688caf8d82f6c510cea793ce2", features = ["sqlite", "fs-scope-validation"] }
routevn-packager = { path = "../.." }
plist = "=1.8.0"

# Keep the standalone player shell aligned with its checked-in dependency set.
serde_with = "=3.15.1"
time = "=0.3.44"
writeable = { version = "=0.6.3", features = ["alloc"] }
icu_collections = "=2.0.0"
icu_locale_core = "=2.0.0"
icu_normalizer = "=2.0.0"
icu_normalizer_data = "=2.0.0"
icu_properties = "=2.0.1"
icu_properties_data = "=2.0.1"
icu_provider = "=2.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "=0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
